fix: purchase change